need to account for data like .dd .db

--- a/ArmIPSOverlapFinder.csproj
+++ b/ArmIPSOverlapFinder.csproj
@@ -11,4 +11,8 @@
     <Folder Include="PatchHandlers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
 </Project>
